[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/char_select.png" type="Texture" id=1]
[ext_resource path="res://Scripts/char_select_screen.gd" type="Script" id=2]

[node name="CharSelectScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 216.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BGP1" type="ColorRect" parent="."]
margin_left = 92.0
margin_top = 36.0
margin_right = 164.0
margin_bottom = 148.0
color = Color( 0.054902, 0.027451, 0.301961, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CharBGP1" type="ColorRect" parent="."]
margin_left = 92.0
margin_top = 56.0
margin_right = 164.0
margin_bottom = 120.0
color = Color( 0.305882, 0.423529, 0.639216, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BGP2" type="ColorRect" parent="."]
margin_left = 220.0
margin_top = 36.0
margin_right = 292.0
margin_bottom = 148.0
color = Color( 0.301961, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CharBGP2" type="ColorRect" parent="."]
margin_left = 220.0
margin_top = 56.0
margin_right = 292.0
margin_bottom = 120.0
color = Color( 0.639216, 0.352941, 0.305882, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="P1" type="Label" parent="."]
margin_left = 96.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 48, 8 )
text = "Player 1"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="P2" type="Label" parent="."]
margin_left = 224.0
margin_top = 40.0
margin_right = 288.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 48, 8 )
text = "Player 2"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteP1" type="Sprite" parent="."]
position = Vector2( 128, 88 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteP2" type="Sprite" parent="."]
position = Vector2( 256, 88 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="FightBtn" type="Button" parent="."]
margin_left = 132.0
margin_top = 168.0
margin_right = 252.0
margin_bottom = 188.0
text = "Fight!"

[node name="ChangeP1" type="Button" parent="."]
margin_left = 96.0
margin_top = 124.0
margin_right = 160.0
margin_bottom = 144.0
text = "Change"

[node name="ChangeP2" type="Button" parent="."]
margin_left = 224.0
margin_top = 124.0
margin_right = 288.0
margin_bottom = 144.0
text = "Change"

[connection signal="button_up" from="FightBtn" to="." method="_on_FightBtn_button_up"]
[connection signal="button_up" from="ChangeP1" to="." method="_on_ChangeP1_button_up"]
[connection signal="button_up" from="ChangeP2" to="." method="_on_ChangeP2_button_up"]
